--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "ios": "react-native run-ios",
     "test": "jest"
   },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  },
   "jest": {
     "preset": "react-native"
   },
