--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-navigation": "1.1.381",
+    "react-native-vector-icons": "4.5.0",
     "react-redux": "5.0.7",
     "redux": "3.7.2",
     "redux-promise": "0.5.3"
